--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
+  "type": "module",
+    "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Edgar De Jesus Gomez Cota",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.20.1",
     "socket.io": "^4.5.0"
   },
   "devDependencies": {
