--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "cs_211111_22",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js "
   },
   "author": "Edgar De Jesus Gomez Cota",
   "license": "ISC",
@@ -18,6 +19,10 @@
     "sequelize": "^6.20.1",
     "socket.io": "^4.5.0"
   },
+   "engines": {
+    "node":"16.14.0"
+   },
+
   "devDependencies": {
     "nodemon": "^2.0.16"
   }
