--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Edgar De Jesus Gomez Cota",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -19,10 +20,9 @@
     "sequelize": "^6.20.1",
     "socket.io": "^4.5.0"
   },
-   "engines": {
-    "node":"16.14.0"
-   },
-
+  "engines": {
+    "node": "16.14.0"
+  },
   "devDependencies": {
     "nodemon": "^2.0.16"
   }
