--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ web_modules/
 # Optional stylelint cache
 .stylelintcache
 
+
 # Microbundle cache
 .rpt2_cache/
 .rts2_cache_cjs/
@@ -77,6 +78,10 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+.env.development
+.env.production
+.env.test
+
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
